[package]
name = "forcegraph"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
getrandom = { version = "0.2.3", features = ["js"] }
js-sys = "0.3.52"
ndarray = "0.15.3"
rand = "0.8.4"
serde = "1.0.127"
serde_derive = "1.0.127"
serde_json = "1.0.66"
wasm-bindgen = { version = "0.2.75", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["FocusEvent", "FocusEventInit"] }
yew = "0.18.0"

