[package]
name = "forcegraph"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.3", features = ["js"] }
ndarray = "0.15.3"
rand = "0.8.4"

# Use `cargo make example` instead of `cargo run --example webui`.
#[[example]]
#name = "webui"
## crate-type = ["cdynlib"]
#path = "examples/webui"
