[package]
name = "webui"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.42"
js-sys = "0.3.52"
serde = "1.0.127"
serde_derive = "1.0.127"
serde_json = "1.0.66"
wasm-bindgen = { version = "0.2.75", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["FocusEvent", "FocusEventInit"] }
yew = "0.18.0"
ndarray = "0.15.3"
forcegraph = { version = "0.1.0", path = "../.." }
